--- a/src/app/drafts/matchup-overview/matchup/speedchart/speedtier/speedtier.component.html
+++ b/src/app/drafts/matchup-overview/matchup/speedchart/speedtier/speedtier.component.html
@@ -4,7 +4,7 @@
   </div>
   <div class="modifier-container">
     @for (modifier of tier.modifiers; track modifier) {
-      <div class="modifier"><img [src]="modifierPath(modifier)" /></div>
+      <div class="modifier">{{ modifier }}</div>
     }
   </div>
   <div class="speed-label">
