--- a/src/app/drafts/matchup-overview/matchup/movechart/movechart.component.html
+++ b/src/app/drafts/matchup-overview/matchup/movechart/movechart.component.html
@@ -1,5 +1,5 @@
-<div class="widget-wrapper" [ngClass]="{ alternate: opponent }">
-  <div class="widget-container">
+<div class="widget-container" [ngClass]="{ alternate: opponent }">
+  <div class="widget-header">
     <div class="widget-label">Learned Moves</div>
     <swap-opponent [(ngModel)]="opponent"></swap-opponent>
   </div>
