--- a/src/app/drafts/matchup-overview/matchup/speedchart/speedchart.component.scss
+++ b/src/app/drafts/matchup-overview/matchup/speedchart/speedchart.component.scss
@@ -3,8 +3,9 @@
 .speed-main {
   display: flex;
   column-gap: 0.5rem;
-  height: fit-content;
-  align-items: flex-start;
+  width: 100%;
+  max-width: 100%;
+
   .base-tiers-container {
     display: flex;
     row-gap: 1px;
@@ -53,29 +54,44 @@
     }
   }
   .tiers-main {
+    flex-grow: 1;
+    max-width: 20rem;
+    overflow: hidden;
+    margin-right: -0.75rem;
+
     .tiers-titles {
+      margin-right: 0.75rem;
       display: flex;
       justify-content: space-between;
       column-gap: 1rem;
     }
     .tiers-container {
+      width: 100%;
       height: 100%;
       overflow: auto;
-      width: min-content;
       scrollbar-gutter: stable;
-      margin-right: -0.75rem;
       .tier-group {
         background-color: var(--mat-sys-secondary-container);
         border-width: 1px;
         border-color: var(--mat-sys-surface);
         border-radius: 0.75rem;
         padding: 0 0.25rem;
-        min-width: 15rem;
-        cursor: pointer;
-        &:hover {
-          background-color: var(--mat-sys-primary-container);
+        width: 40rem;
+        max-width: 100%;
+        &.grouped {
+          cursor: pointer;
+          &:hover {
+            border: 1px solid var(--mat-sys-outline-variant);
+          }
         }
 
+        > :not(:first-child) {
+          border-top: 1px solid var(--mat-sys-outline-variant);
+        }
+
+        .speedtier-wrapper {
+          padding: 0.125rem 0;
+        }
         .collapsed-group {
           display: flex;
           align-items: center;
