--- a/src/app/drafts/matchup-overview/matchup/speedchart/speedtier/speedtier.component.scss
+++ b/src/app/drafts/matchup-overview/matchup/speedchart/speedtier/speedtier.component.scss
@@ -3,7 +3,9 @@
   width: 100%;
   .sprite-wrapper {
     width: 2rem;
+    flex-shrink: 0;
     height: 2rem;
+    align-self: center;
   }
   .speed-label {
     line-height: 2rem;
@@ -12,19 +14,21 @@
   }
   .modifier-container {
     display: flex;
+    flex-wrap: wrap;
     flex-grow: 1;
+    align-items: center;
+    gap: 0.125rem;
+    padding: 0.125rem 0.25rem;
     .modifier {
-      width: 2rem;
-      height: 2rem;
-      line-height: 2rem;
+      height: 1rem;
       overflow: hidden;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      img {
-        width: 1.5rem;
-        height: 1.5rem;
-      }
+      padding: 0 0.25rem;
+      font-weight: 700;
+      font-size: 0.7em;
+      border: 1px solid var(--mat-sys-secondary);
+      color: var(--mat-sys-secondary);
+      border-radius: 1rem;
+      user-select: none;
     }
   }
 }
