--- a/src/app/drafts/matchup-overview/matchup-overview.component.html
+++ b/src/app/drafts/matchup-overview/matchup-overview.component.html
@@ -96,64 +96,85 @@
                     <p class="detail-text">{{ matchupData.details.format }}</p>
                   </div>
                 </div>
-                <div class="name-container">
-                  <div class="name-text">
-                    {{ matchupData.summary[0].teamName }}
-                  </div>
-                  <div class="name-text">
-                    {{ matchupData.summary[1].teamName }}
-                  </div>
-                </div>
-                <div class="name-container">
-                  <div class="name-text">
-                    {{ matchupData.summary[0].coach }}
-                  </div>
-                  <div class="name-text">
-                    {{ matchupData.summary[1].coach }}
-                  </div>
-                </div>
-                <div class="flex divide-x-2">
-                  <div
-                    class="flex flex-row flex-wrap justify-end w-1/2 pr-2 h-fit"
-                  >
-                    <div
-                      class="relative w-1/3 sm:w-1/4"
-                      *ngFor="let pokemon of matchupData.summary[0].team"
-                    >
-                      <sprite [pokemon]="pokemon" [flipped]="true"></sprite>
-
-                      @if (pokemon.capt?.tera) {
-                        <mat-icon>copy</mat-icon>
-                      }
-                      <div
-                        class="absolute flex justify-center w-full -bottom-1"
-                      >
-                        <div
-                          class="w-1/2 font-semibold text-center border rounded-full text-2xs sm:text-xs bg-menu-100 border-menu-200"
-                        >
-                          {{ pokemon.baseStats.spe }}
-                        </div>
+                <div class="teams-container">
+                  <div class="team-container">
+                    <div class="name-container">
+                      <div class="name-text">
+                        {{ matchupData.summary[0].teamName }}
                       </div>
+                      @if (
+                        matchupData.summary[0].coach ||
+                        matchupData.summary[1].coach
+                      ) {
+                        <div class="coach-text">
+                          {{ matchupData.summary[0].coach }}
+                        </div>
+                      }
+                    </div>
+                    <div class="sprite-container">
+                      @for (
+                        pokemon of matchupData.summary[0].team;
+                        track pokemon
+                      ) {
+                        <div class="sprite-wrapper">
+                          <sprite [pokemon]="pokemon" flipped></sprite>
+                          <div class="capt-label">
+                            @if (pokemon.capt?.tera) {
+                              <mat-icon svgIcon="tera"></mat-icon>
+                            }
+                            @if (pokemon.capt?.z) {
+                              <mat-icon svgIcon="z"></mat-icon>
+                            }
+                            @if (pokemon.capt?.dmax) {
+                              <mat-icon svgIcon="dmax"></mat-icon>
+                            }
+                          </div>
+
+                          <div class="speed-label">
+                            {{ pokemon.baseStats.spe }}
+                          </div>
+                        </div>
+                      }
                     </div>
                   </div>
-                  <div class="flex flex-wrap w-1/2 pl-2 h-fit">
-                    <div
-                      class="relative w-1/3 sm:w-1/4"
-                      *ngFor="let pokemon of matchupData.summary[1].team"
-                    >
-                      <sprite [pokemon]="pokemon"></sprite>
-                      @if (pokemon.capt?.tera) {
-                        <mat-icon>copy</mat-icon>
-                      }
-                      <div
-                        class="absolute flex justify-center w-full -bottom-1"
-                      >
-                        <div
-                          class="w-1/2 font-semibold text-center border rounded-full text-2xs sm:text-xs bg-menu-100 border-menu-200"
-                        >
-                          {{ pokemon.baseStats.spe }}
-                        </div>
+                  <div class="team-container alternate">
+                    <div class="name-container">
+                      <div class="name-text">
+                        {{ matchupData.summary[1].teamName }}
                       </div>
+                      @if (
+                        matchupData.summary[0].coach ||
+                        matchupData.summary[1].coach
+                      ) {
+                        <div class="coach-text">
+                          {{ matchupData.summary[1].coach }}
+                        </div>
+                      }
+                    </div>
+                    <div class="sprite-container">
+                      @for (
+                        pokemon of matchupData.summary[1].team;
+                        track pokemon
+                      ) {
+                        <div class="sprite-wrapper">
+                          <sprite [pokemon]="pokemon"></sprite>
+                          <div class="capt-label">
+                            @if (pokemon.capt?.tera) {
+                              <mat-icon svgIcon="tera"></mat-icon>
+                            }
+                            @if (pokemon.capt?.z) {
+                              <mat-icon svgIcon="z"></mat-icon>
+                            }
+                            @if (pokemon.capt?.dmax) {
+                              <mat-icon svgIcon="dmax"></mat-icon>
+                            }
+                          </div>
+
+                          <div class="speed-label">
+                            {{ pokemon.baseStats.spe }}
+                          </div>
+                        </div>
+                      }
                     </div>
                   </div>
                 </div>
